--- a/HexaHTML/index.html
+++ b/HexaHTML/index.html
@@ -13,8 +13,10 @@
 		<link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
 		<link rel="stylesheet" href="css/hexagon.css" type="text/css" media="all" />
 		<link rel="stylesheet" href="css/button.css" type="text/css" media="all" />
-		<link rel="stylesheet" href="css/flip.css" type="text/css" media="all" />
+		<link rel="stylesheet" href="css/sidebar.css" type="text/css" media="all" />
 		<link rel="stylesheet" href="css/ionicons.min.css" type="text/css" media="all" />
+		<link rel="stylesheet" href="css/SidebarNav.min.css" type="text/css" media="all" />
+		<link rel="stylesheet" href="css/bootstrap.css" type="text/css" media="all" />
 		<link rel="stylesheet" type="text/css" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 		<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT" crossorigin="anonymous"></script>
 	<!-- //Style-CSS -->
@@ -34,7 +36,7 @@
 			<!--//header-->
 			
 		<div class="main">
-
+		
 			<div class="main-left">
 				<figure class="hexagonBLUE"></figure>
 				<figure class="hexagonYELLOW"></figure>
@@ -70,9 +72,69 @@
 					</div>
 			</div>
 
+			<!-- menu -->
+			<div class="side_menu">
+
+				<div class="burger_box">
+					<div class="menu-icon-container">
+						<a href="#" class="menu-icon js-menu_toggle closed">
+							<span class="menu-icon_box">
+								<span class="menu-icon_line menu-icon_line--1"></span>
+								<span class="menu-icon_line menu-icon_line--2"></span>
+								<span class="menu-icon_line menu-icon_line--3"></span>
+							</span>
+						</a>
+					</div>
+				</div>
+
+				<div class="container">
+					<ul class="sidebar-menu">
+
+						<li class="treeview   active">
+								<h2>Node1</h2>
+						</li>
+
+						<li class="treeview">
+								<h2>Node2</h2>
+						</li>
+
+						<li class="treeview">
+								<h2>Node3</h2>
+						</li>
+
+						<li class="treeview">
+								<h2>Node4</h2>
+						</li>
+
+						<li class="treeview">
+								<h2>Node4</h2>
+						</li>
+
+						<li class="treeview">
+								<h2>Node5</h2>
+						</li>
+
+						<li class="treeview">
+									<h2>Node6</h2>
+							</li>
+
+							<li class="treeview">
+										<h2>Node7</h2>
+								</li>
+
+								<li class="treeview">
+										<h2>Node8</h2>
+									</li>
+
+					</ul>
+				</div>
+			</div>
+			<!-- //menu -->
+
 			<script src="js/button.js"></script>
 			<script src="js/hexagon.js"></script>
-			<script src="js/flip.js"></script>
+			<script src="js/menu.js"></script>
+			<script src="js/SidebarNav.min.js"></script>
 			
 			<!-- //content -->
 			<div class="clear"></div>
